# nonogram-solver

./: .gitignore  ADVANCED_TECHNIQUES.md  AUDIT_DEPENDANCES.md  AUDIT_GUI_RUST.md  CHANGELOG.md  Cargo.toml  GUIDE_UTILISATION.md  GUI_DESIGN.md  GUI_README.md  LICENSE  LIVRAISON.md  README.md
examples/: generate_heart.py  generate_test_image.py  heart_10x10.json  simple_10x10.json  simple_5x5.json
src/: gui_main.rs  main.rs
src/drawing/: mod.rs
src/edge_detection/: mod.rs
src/grid/: constraints.rs  mod.rs
src/gui/: constraint_extractor.rs  history.rs  logic.rs  mod.rs
src/image_generator/: mod.rs
src/image_parser/: grid_detector.rs  mod.rs
src/ocr/: advanced_extractor.rs  mod.rs
src/solver/: advanced_heuristics.rs  advanced_solver.rs  backtracking.rs  backtracking_optimized.rs  contradiction_detector.rs  cross_analysis.rs  line_solver.rs  line_solver_optimized.rs  mod.rs  parallel_solver.rs  ultimate_solver.rs
ui/: app.slint
