[package]
name = "nonogram-solver"
version = "0.3.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "bmp", "gif", "tiff", "webp"] }
imageproc = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tesseract = { version = "0.15", optional = true }
regex = "1.10"

[features]
default = []
ocr = ["tesseract"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
