[package]
name = "nonogram-solver"
version = "0.9.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "bmp", "gif", "tiff", "webp"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
tesseract = { version = "0.15", optional = true }
regex = "1.10"
dirs = "5.0"
chrono = "0.4"
slint = { version = "1.9", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = []
ocr = ["tesseract"]
gui = ["slint", "rfd", "slint-build"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "nonogram-solver"
path = "src/main.rs"

[[bin]]
name = "nonogram-solver-gui"
path = "src/gui_main.rs"
required-features = ["gui"]

[build-dependencies]
slint-build = { version = "1.9", optional = true }
